// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SheetList /> should not render invalid children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
>
  <List
    className="null engage__sheet-list"
    role="listbox"
  >
    <ul
      className="null engage__sheet-list common_list"
      role="listbox"
    >
      <ListItem
        className="css-10041rq css-171mywc"
        isSelected={false}
        key="child-0/.0"
        role={null}
        tabIndex={0}
      >
        <li
          className="css-1p5q8vq css-10041rq css-171mywc common__list__list-item css-16gj3o1"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <ForwardRef(WithForwardedRef(Item))
              title="List Item"
            >
              <Item
                className={null}
                forwardedRef={null}
                image={null}
                isDisabled={false}
                isSelected={false}
                link={null}
                linkState={null}
                onClick={null}
                rightComponent={null}
                testId={null}
                title="List Item"
              >
                <div
                  className="engage__sheet-list__item"
                  data-test-id={null}
                >
                  <Grid
                    className="css-1qcr7hz"
                    component="div"
                    wrap={false}
                  >
                    <div
                      className="css-1qcr7hz css-h7r55a common__grid"
                    >
                      <GridItem
                        className="css-rx1nvy"
                        component="div"
                        grow={1}
                        shrink={1}
                      >
                        <div
                          className="css-rx1nvy css-1gs0ko2"
                        >
                          List Item
                        </div>
                      </GridItem>
                    </div>
                  </Grid>
                </div>
              </Item>
            </ForwardRef(WithForwardedRef(Item))>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;

exports[`<SheetList /> should not render without children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
/>
`;

exports[`<SheetList /> should render a child and add styles for list items with images 1`] = `
<SheetList
  className={null}
  hasImages={true}
  testId={null}
>
  <List
    className="null engage__sheet-list"
    role="listbox"
  >
    <ul
      className="null engage__sheet-list common_list"
      role="listbox"
    >
      <ListItem
        className="css-10041rq css-1brrprg css-171mywc"
        isSelected={false}
        key="child-0/.0"
        role={null}
        tabIndex={0}
      >
        <li
          className="css-1p5q8vq css-10041rq css-1brrprg css-171mywc common__list__list-item css-16gj3o1"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <ForwardRef(WithForwardedRef(Item))
              title="List Item"
            >
              <Item
                className={null}
                forwardedRef={null}
                image={null}
                isDisabled={false}
                isSelected={false}
                link={null}
                linkState={null}
                onClick={null}
                rightComponent={null}
                testId={null}
                title="List Item"
              >
                <div
                  className="engage__sheet-list__item"
                  data-test-id={null}
                >
                  <Grid
                    className="css-1qcr7hz"
                    component="div"
                    wrap={false}
                  >
                    <div
                      className="css-1qcr7hz css-h7r55a common__grid"
                    >
                      <GridItem
                        className="css-rx1nvy"
                        component="div"
                        grow={1}
                        shrink={1}
                      >
                        <div
                          className="css-rx1nvy css-1gs0ko2"
                        >
                          List Item
                        </div>
                      </GridItem>
                    </div>
                  </Grid>
                </div>
              </Item>
            </ForwardRef(WithForwardedRef(Item))>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;

exports[`<SheetList /> should render with two children 1`] = `
<SheetList
  className={null}
  hasImages={false}
  testId={null}
>
  <List
    className="null engage__sheet-list"
    role="listbox"
  >
    <ul
      className="null engage__sheet-list common_list"
      role="listbox"
    >
      <ListItem
        className="css-10041rq css-171mywc"
        isSelected={false}
        key="child-0/.0"
        role={null}
        tabIndex={0}
      >
        <li
          className="css-1p5q8vq css-10041rq css-171mywc common__list__list-item css-16gj3o1"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <ForwardRef(WithForwardedRef(Item))
              title="List Item"
            >
              <Item
                className={null}
                forwardedRef={null}
                image={null}
                isDisabled={false}
                isSelected={false}
                link={null}
                linkState={null}
                onClick={null}
                rightComponent={null}
                testId={null}
                title="List Item"
              >
                <div
                  className="engage__sheet-list__item"
                  data-test-id={null}
                >
                  <Grid
                    className="css-1qcr7hz"
                    component="div"
                    wrap={false}
                  >
                    <div
                      className="css-1qcr7hz css-h7r55a common__grid"
                    >
                      <GridItem
                        className="css-rx1nvy"
                        component="div"
                        grow={1}
                        shrink={1}
                      >
                        <div
                          className="css-rx1nvy css-1gs0ko2"
                        >
                          List Item
                        </div>
                      </GridItem>
                    </div>
                  </Grid>
                </div>
              </Item>
            </ForwardRef(WithForwardedRef(Item))>
          </div>
        </li>
      </ListItem>
      <ListItem
        className="css-10041rq css-171mywc"
        isSelected={false}
        key="child-1/.1"
        role={null}
        tabIndex={0}
      >
        <li
          className="css-1p5q8vq css-10041rq css-171mywc common__list__list-item css-16gj3o1"
          data-test-id="listItem"
          role={null}
        >
          <div
            className="css-1ckzvk7"
            data-test-id={null}
          >
            <ForwardRef(WithForwardedRef(Item))
              title="List Item"
            >
              <Item
                className={null}
                forwardedRef={null}
                image={null}
                isDisabled={false}
                isSelected={false}
                link={null}
                linkState={null}
                onClick={null}
                rightComponent={null}
                testId={null}
                title="List Item"
              >
                <div
                  className="engage__sheet-list__item"
                  data-test-id={null}
                >
                  <Grid
                    className="css-1qcr7hz"
                    component="div"
                    wrap={false}
                  >
                    <div
                      className="css-1qcr7hz css-h7r55a common__grid"
                    >
                      <GridItem
                        className="css-rx1nvy"
                        component="div"
                        grow={1}
                        shrink={1}
                      >
                        <div
                          className="css-rx1nvy css-1gs0ko2"
                        >
                          List Item
                        </div>
                      </GridItem>
                    </div>
                  </Grid>
                </div>
              </Item>
            </ForwardRef(WithForwardedRef(Item))>
          </div>
        </li>
      </ListItem>
    </ul>
  </List>
</SheetList>
`;
